--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
           <a href="#" class="nav-link">Cart</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Login</a>
+          <a href="sign_in.html" class="nav-link">Sign In</a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link">About us</a>
