Sign Up and LogIn Page is add

--- a/pages/index.html
+++ b/pages/index.html
@@ -220,7 +220,7 @@
         <div class="space-between bold-text">
           <p>Launch: 1:00 to 2:30 pm</p>
         </div>
-        <div class="opening-section">
+        <div class="opening-section bold-text">
           <p>Sunday: Closed</p>
         </div>
       </div>
