menu page and about us page is add

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -32,98 +32,33 @@
 
     <section id="go-arrow">^</section>
 
-    <section class="account-container">
-      <div class="form-section">
-        <div class="form-massage">
-          <p class="m-t-25 msg-p">Sign in with your email</p>
-          <p class="m-t-25">
-            Don't have a account?
-            <button id="sign-up-btn" class="form-btn">Sign up</button>
-          </p>
-        </div>
-        <form action="#" id="log-in" class="m-t-25">
-          <input
-            class="form-input"
-            type="text"
-            name="log-in-user-name"
-            id="log-in-user-name"
-            placeholder="Username"
-          />
-          <input
-            class="form-input"
-            name="log-in-user-password"
-            id="log-in-user-password"
-            type="password"
-            placeholder="Password"
-          />
-          <input
-            class="m-t-25 checked-box-btn"
-            type="checkbox"
-            name="show-password-log-in"
-            id="show-password-log-in"
-          />
-          <label for="show-password-log-in">Show Password</label>
-          <a href="#" class="forgot-password">Forgot password?</a>
-          <input
-            class="form-input form-input-btn"
-            type="submit"
-            value="continue"
-          />
-        </form>
+    <section class="about-page-container">
+      <div class="about-page-section">
+        <h2 class="about-us-heading">About Us</h2>
       </div>
-      <div class="form-section hide-form">
-        <div class="form-massage">
-          <p class="m-t-25 msg-p">Sign Up with your email</p>
-          <p class="m-t-25">
-            Already have an account?
-            <button id="sign-in-btn" class="form-btn">Sign in</button>
-          </p>
-        </div>
-        <form action="#" id="sign-in" class="m-t-25" target="_black">
-          <input
-            class="form-input"
-            type="text"
-            name="sign-in-full-name"
-            id="sign-in-full-name"
-            placeholder="Full Name"
-          />
-          <input
-            class="form-input"
-            type="text"
-            name="sign-in-user-name"
-            id="sign-in-user-name"
-            placeholder="Username"
-          />
-          <input
-            class="form-input"
-            name="sign-in-user-password"
-            id="sign-in-user-password"
-            type="password"
-            placeholder="Password"
-          />
-          <input
-            class="form-input"
-            name="sign-in-user-re-password"
-            id="sign-in-user-re-password"
-            type="password"
-            placeholder="Re-Password"
-          />
-          <input
-            class="m-t-25 checked-box-btn"
-            type="checkbox"
-            id="show-password-sign-up"
-            name="show-password-sign-up"
-          />
-          <label for="show-password-sign-up">Show Password</label>
-          <input
-            class="form-input form-input-btn"
-            type="submit"
-            value="create account"
-          />
-        </form>
-      </div>
+      <p class="about-page-section-paragraph">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed voluptates
+        adipisci doloremque magni, nostrum earum animi autem corporis! Est,
+        facere. Culpa sunt optio possimus porro fugiat neque unde cum quis. A
+        perspiciatis numquam et possimus vero facere excepturi, quam, minima hic
+        veniam amet nisi molestias facilis libero delectus, soluta suscipit
+        laboriosam veritatis enim! Corrupti doloribus cumque quasi perspiciatis
+        repellendus autem. Animi ratione sed mollitia quasi, suscipit tempore
+        vero asperiores nihil eius velit? Vitae perspiciatis est placeat at,
+        distinctio accusamus quasi exercitationem aut assumenda temporibus illo
+        labore molestias pariatur a dolor. Error similique eum minus unde rerum
+        nihil dolorum temporibus nostrum ipsum incidunt quasi, quia quos illum
+        laudantium cum. Pariatur rem ea perferendis enim fuga perspiciatis
+        officiis velit qui nulla ab? Est, fuga eum dicta cumque, consequuntur,
+        quas quae voluptates deserunt ad accusamus quo repudiandae! Odio cumque
+        voluptas a libero? Eveniet omnis delectus ipsa veniam, consequatur nemo
+        ipsam incidunt pariatur corrupti! Blanditiis nostrum quod perferendis
+        iste veritatis deserunt distinctio doloribus ab numquam quisquam
+        necessitatibus sed laudantium corrupti accusantium mollitia, repellat ex
+        rem quaerat cupiditate. Iste quaerat dicta cum nesciunt commodi
+        quisquam!
+      </p>
     </section>
-
     <footer class="footer-container">
       <div class="location-container">
         <h2 class="footer-titles">Location</h2>
@@ -196,6 +131,5 @@
       </div>
     </footer>
     <script src="../js/main.js"></script>
-    <script src="../js/account.js"></script>
   </body>
 </html>
