--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
           <a href="index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Dishes</a>
+          <a href="Menu.html" class="nav-link">Menu</a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link">Cart</a>
@@ -25,7 +25,7 @@
           <a href="sign_in.html" class="nav-link">Sign In</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">About us</a>
+          <a href="about_us.html" class="nav-link">About us</a>
         </li>
       </ul>
     </header>
@@ -46,9 +46,7 @@
         <div class="dishes-containers">
           <div class="dishes-img-containers">
             <div class="dish-img-border-containers">
-              <a href="#" class="img-a-container">
-                <img src="../images/pizza.jpg" alt="pizza" class="dishes-img" />
-              </a>
+              <img src="../images/pizza.jpg" alt="pizza" class="dishes-img" />
               <div class="dish-img-btn-containers">
                 <h3>Pizza</h3>
                 <span class="item-price">₹200</span>
@@ -61,16 +59,10 @@
           </div>
           <div class="dishes-img-containers">
             <div class="dish-img-border-containers">
-              <a href="#" class="img-a-container">
-                <img
-                  src="../images/burger.jpg"
-                  alt="burger"
-                  class="dishes-img"
-                />
-              </a>
+              <img src="../images/burger.jpg" alt="burger" class="dishes-img" />
               <div class="dish-img-btn-containers">
                 <h3>Burger</h3>
-                <span class="item-price">₹200</span>
+                <span class="item-price">₹100</span>
                 <button type="button" class="order-card">
                   <img src="../icons/shopping-cart.png" alt="Shooping cart" />
                   Order Now
@@ -80,16 +72,14 @@
           </div>
           <div class="dishes-img-containers">
             <div class="dish-img-border-containers">
-              <a href="#" class="img-a-container">
-                <img
-                  src="../images/sandwich.jpg"
-                  alt="sandwich"
-                  class="dishes-img"
-                />
-              </a>
+              <img
+                src="../images/sandwich.jpg"
+                alt="sandwich"
+                class="dishes-img"
+              />
               <div class="dish-img-btn-containers">
                 <h3>Sandwich</h3>
-                <span class="item-price">₹200</span>
+                <span class="item-price">₹50</span>
                 <button type="button" class="order-card">
                   <img src="../icons/shopping-cart.png" alt="Shooping cart" />
                   Order Now
@@ -99,21 +89,23 @@
           </div>
         </div>
         <div class="dishe-container-heading">
-          <button class="btn btn-more">More</button>
+          <a href="Menu.html">
+            <button class="btn btn-more">More</button>
+          </a>
         </div>
       </div>
     </section>
 
     <section class="about-us-container">
       <div class="about-us">
-        <h2>ABOUT US</h2>
+        <h2 class="about-us-heading">ABOUT US</h2>
         <p>
           For us, it's not just about bringing you good food from your favourite
           restaurants. It's about making a connection, which is why we sit down
           with the chefs, dreaming up menus that will arrive fresh and full of
           flavour. Try us!
         </p>
-        <a href="#">
+        <a href="about_us.html">
           <button class="btn">Learn more</button>
         </a>
       </div>
@@ -257,5 +249,6 @@
       </div>
     </footer>
     <script src="../js/main.js"></script>
+    <script src="../js/index.js"></script>
   </body>
 </html>
