--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -16,10 +16,10 @@
           <a href="index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="Menu.html" class="nav-link">Menu</a>
+          <a href="menu.html" class="nav-link">Menu</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Cart</a>
+          <a href="cart.html" class="nav-link">Cart</a>
         </li>
         <li class="nav-item">
           <a href="sign_in.html" class="nav-link">Sign In</a>
@@ -37,214 +37,228 @@
         <div class="dishe-container-heading">
           <h2>Dishes</h2>
         </div>
-        <div class="dishes-containers menu-section">
-          <div class="dishes-img-containers">
-            <div class="dish-img-border-containers">
-              <img
-                src="../images/burgur-menu.png"
-                alt="Burgur"
-                class="dishes-img border-img"
-              />
-              <div class="dish-img-btn-containers">
-                <h3>Burgur</h3>
-                <span class="item-price">₹100</span>
-                <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
-                  Order Now
-                </button>
+        <div id="disheses">
+          <div class="dishes-containers menu-section">
+            <div class="dishes-img-containers">
+              <div class="dish-img-border-containers">
+                <img
+                  src="../images/burgur-menu.png"
+                  alt="Burgur"
+                  class="dishes-img border-img"
+                  data-dish="burger"
+                />
+                <div class="dish-img-btn-containers">
+                  <h3>Burgur</h3>
+                  <span class="item-price">₹100</span>
+                  <button type="button" class="order-card">
+                    <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                    Order Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="dishes-img-containers">
+              <div class="dish-img-border-containers">
+                <img
+                  src="../images/veg-taco-bell-crunchy-taco-menu.png"
+                  alt="veg-taco-bell-crunchy-taco"
+                  class="dishes-img border-img"
+                  data-dish="veg-taco-bell-crunchy-taco"
+                />
+                <div class="dish-img-btn-containers">
+                  <h3>Veg taco bell crunchy</h3>
+                  <span class="item-price">₹100</span>
+                  <button type="button" class="order-card">
+                    <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                    Order Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="dishes-img-containers">
+              <div class="dish-img-border-containers">
+                <img
+                  src="../images/sandwich-menu.png"
+                  alt="sandwich"
+                  class="dishes-img border-img"
+                  data-dish="sandwich"
+                />
+                <div class="dish-img-btn-containers">
+                  <h3>sandwich</h3>
+                  <span class="item-price">₹50</span>
+                  <button type="button" class="order-card">
+                    <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                    Order Now
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-          <div class="dishes-img-containers">
-            <div class="dish-img-border-containers">
-              <img
-                src="../images/veg-taco-bell-crunchy-taco-menu.png"
-                alt="pizza"
-                class="dishes-img border-img"
-              />
-              <div class="dish-img-btn-containers">
-                <h3>Veg taco bell crunchy</h3>
-                <span class="item-price">₹100</span>
-                <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
-                  Order Now
-                </button>
+          <div class="dishes-containers menu-section">
+            <div class="dishes-img-containers">
+              <div class="dish-img-border-containers">
+                <img
+                  src="../images/Mcdonald's-french-fries-menu.png"
+                  data-dish="Mcdonald's-french-fries"
+                  alt="Mcdonald's-french-fries"
+                  class="dishes-img border-img"
+                />
+                <div class="dish-img-btn-containers">
+                  <h3>Mcdonald's french fries</h3>
+                  <span class="item-price">₹50</span>
+                  <button type="button" class="order-card">
+                    <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                    Order Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="dishes-img-containers">
+              <div class="dish-img-border-containers">
+                <img
+                  src="../images/cocacola-menu.png"
+                  alt="cocacola"
+                  data-dish="cocacola"
+                  class="dishes-img border-img"
+                />
+                <div class="dish-img-btn-containers">
+                  <h3>cocacola</h3>
+                  <span class="item-price">₹50</span>
+                  <button type="button" class="order-card">
+                    <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                    Order Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="dishes-img-containers">
+              <div class="dish-img-border-containers">
+                <img
+                  src="../images/donuts-coffee-menu.png"
+                  alt="donuts"
+                  data-dish="donuts"
+                  class="dishes-img border-img"
+                />
+                <div class="dish-img-btn-containers">
+                  <h3>donuts</h3>
+                  <span class="item-price">₹100</span>
+                  <button type="button" class="order-card">
+                    <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                    Order Now
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-          <div class="dishes-img-containers">
-            <div class="dish-img-border-containers">
-              <img
-                src="../images/sandwich-menu.png"
-                alt="sandwich"
-                class="dishes-img border-img"
-              />
-              <div class="dish-img-btn-containers">
-                <h3>sandwich</h3>
-                <span class="item-price">₹50</span>
-                <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
-                  Order Now
-                </button>
+          <div class="dishes-containers menu-section">
+            <div class="dishes-img-containers">
+              <div class="dish-img-border-containers">
+                <img
+                  src="../images/burgur-menu.png"
+                  data-dish="Burgur"
+                  alt="Burgur"
+                  class="dishes-img border-img"
+                />
+                <div class="dish-img-btn-containers">
+                  <h3>Burgur</h3>
+                  <span class="item-price">₹100</span>
+                  <button type="button" class="order-card">
+                    <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                    Order Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="dishes-img-containers">
+              <div class="dish-img-border-containers">
+                <img
+                  src="../images/veg-taco-bell-crunchy-taco-menu.png"
+                  data-dish="veg-taco-bell-crunchy-taco"
+                  alt="veg-taco-bell-crunchy-taco"
+                  class="dishes-img border-img"
+                />
+                <div class="dish-img-btn-containers">
+                  <h3>Veg taco bell crunchy</h3>
+                  <span class="item-price">₹100</span>
+                  <button type="button" class="order-card">
+                    <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                    Order Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="dishes-img-containers">
+              <div class="dish-img-border-containers">
+                <img
+                  data-dish="sandwich"
+                  src="../images/sandwich-menu.png"
+                  alt="sandwich"
+                  class="dishes-img border-img"
+                />
+                <div class="dish-img-btn-containers">
+                  <h3>sandwich</h3>
+                  <span class="item-price">₹50</span>
+                  <button type="button" class="order-card">
+                    <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                    Order Now
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="dishes-containers menu-section">
-          <div class="dishes-img-containers">
-            <div class="dish-img-border-containers">
-              <img
-                src="../images/Mcdonald's-french-fries-menu.png"
-                alt="Mcdonald's-french-fries"
-                class="dishes-img border-img"
-              />
-              <div class="dish-img-btn-containers">
-                <h3>Mcdonald's french fries</h3>
-                <span class="item-price">₹50</span>
-                <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
-                  Order Now
-                </button>
+          <div class="dishes-containers menu-section">
+            <div class="dishes-img-containers">
+              <div class="dish-img-border-containers">
+                <img
+                  src="../images/Mcdonald's-french-fries-menu.png"
+                  alt="Mcdonald's-french-fries"
+                  data-dish="Mcdonald's-french-fries"
+                  class="dishes-img border-img"
+                />
+                <div class="dish-img-btn-containers">
+                  <h3>Mcdonald's french fries</h3>
+                  <span class="item-price">₹50</span>
+                  <button type="button" class="order-card">
+                    <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                    Order Now
+                  </button>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="dishes-img-containers">
-            <div class="dish-img-border-containers">
-              <img
-                src="../images/cocacola-menu.png"
-                alt="cocacola"
-                class="dishes-img border-img"
-              />
-              <div class="dish-img-btn-containers">
-                <h3>cocacola</h3>
-                <span class="item-price">₹50</span>
-                <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
-                  Order Now
-                </button>
+            <div class="dishes-img-containers">
+              <div class="dish-img-border-containers">
+                <img
+                  src="../images/cocacola-menu.png"
+                  data-dish="cocacola"
+                  alt="cocacola"
+                  class="dishes-img border-img"
+                />
+                <div class="dish-img-btn-containers">
+                  <h3>cocacola</h3>
+                  <span class="item-price">₹50</span>
+                  <button type="button" class="order-card">
+                    <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                    Order Now
+                  </button>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="dishes-img-containers">
-            <div class="dish-img-border-containers">
-              <img
-                src="../images/donuts-coffee-menu.png"
-                alt="donuts"
-                class="dishes-img border-img"
-              />
-              <div class="dish-img-btn-containers">
-                <h3>donuts</h3>
-                <span class="item-price">₹100</span>
-                <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
-                  Order Now
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="dishes-containers menu-section">
-          <div class="dishes-img-containers">
-            <div class="dish-img-border-containers">
-              <img
-                src="../images/burgur-menu.png"
-                alt="Burgur"
-                class="dishes-img border-img"
-              />
-              <div class="dish-img-btn-containers">
-                <h3>Burgur</h3>
-                <span class="item-price">₹100</span>
-                <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
-                  Order Now
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="dishes-img-containers">
-            <div class="dish-img-border-containers">
-              <img
-                src="../images/veg-taco-bell-crunchy-taco-menu.png"
-                alt="pizza"
-                class="dishes-img border-img"
-              />
-              <div class="dish-img-btn-containers">
-                <h3>Veg taco bell crunchy</h3>
-                <span class="item-price">₹100</span>
-                <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
-                  Order Now
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="dishes-img-containers">
-            <div class="dish-img-border-containers">
-              <img
-                src="../images/sandwich-menu.png"
-                alt="sandwich"
-                class="dishes-img border-img"
-              />
-              <div class="dish-img-btn-containers">
-                <h3>sandwich</h3>
-                <span class="item-price">₹50</span>
-                <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
-                  Order Now
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="dishes-containers menu-section">
-          <div class="dishes-img-containers">
-            <div class="dish-img-border-containers">
-              <img
-                src="../images/Mcdonald's-french-fries-menu.png"
-                alt="Mcdonald's-french-fries"
-                class="dishes-img border-img"
-              />
-              <div class="dish-img-btn-containers">
-                <h3>Mcdonald's french fries</h3>
-                <span class="item-price">₹50</span>
-                <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
-                  Order Now
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="dishes-img-containers">
-            <div class="dish-img-border-containers">
-              <img
-                src="../images/cocacola-menu.png"
-                alt="cocacola"
-                class="dishes-img border-img"
-              />
-              <div class="dish-img-btn-containers">
-                <h3>cocacola</h3>
-                <span class="item-price">₹50</span>
-                <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
-                  Order Now
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="dishes-img-containers">
-            <div class="dish-img-border-containers">
-              <img
-                src="../images/donuts-coffee-menu.png"
-                alt="donuts"
-                class="dishes-img border-img"
-              />
-              <div class="dish-img-btn-containers">
-                <h3>donuts</h3>
-                <span class="item-price">₹100</span>
-                <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
-                  Order Now
-                </button>
+            <div class="dishes-img-containers">
+              <div class="dish-img-border-containers">
+                <img
+                  src="../images/donuts-coffee-menu.png"
+                  data-dish="donuts"
+                  alt="donuts"
+                  class="dishes-img border-img"
+                />
+                <div class="dish-img-btn-containers">
+                  <h3>donuts</h3>
+                  <span class="item-price">₹100</span>
+                  <button type="button" class="order-card">
+                    <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                    Order Now
+                  </button>
+                </div>
               </div>
             </div>
           </div>
@@ -323,6 +337,7 @@
         <div style="margin-top: 10px">&copy; 2022</div>
       </div>
     </footer>
+
     <script src="../js/main.js"></script>
     <script src="../js/menu.js"></script>
   </body>
