--- a/pages/cart.html
+++ b/pages/cart.html
@@ -32,33 +32,67 @@
 
     <section id="go-arrow">^</section>
 
-    <section class="about-page-container">
-      <div class="about-page-section">
-        <h2 class="about-us-heading">About Us</h2>
+    <section class="card-content">
+      <div class="card-section">
+        <h3 class="card-m">
+          <img src="../icons/shopping-cart.png" alt="shopping-cart" /> My Cart
+        </h3>
+        <hr />
+        <div class="main-card">
+          <hr class="card-m" />
+          <div class="cart">
+            <img src="../images/burgur-menu.png" alt="" class="cart-img" />
+            <p>Burgur</p>
+            <p>₹100</p>
+            <input type="number" />
+            <p>₹100</p>
+            <button class="remover-btn">Remove</button>
+          </div>
+          <hr class="card-m" />
+        </div>
+        <div class="main-card">
+          <hr class="card-m" />
+          <div class="cart">
+            <img
+              src="../images/veg-taco-bell-crunchy-taco-menu.png"
+              class="cart-img"
+            />
+            <p>taco bell</p>
+            <p>₹100</p>
+            <input type="number" />
+            <p>₹100</p>
+            <button class="remover-btn">Remove</button>
+          </div>
+          <hr class="card-m" />
+        </div>
+        <div class="main-card">
+          <hr class="card-m" />
+          <div class="cart">
+            <img src="../images/sandwich-menu.png" class="cart-img" />
+            <p>sandwich</p>
+            <p>₹50</p>
+            <input type="number" />
+            <p>₹50</p>
+            <button class="remover-btn">Remove</button>
+          </div>
+          <hr class="card-m" />
+        </div>
+        <div class="main-card">
+          <hr class="card-m" />
+          <div class="total">
+            <p>total</p>
+            <p>₹250</p>
+          </div>
+          <hr class="card-m" />
+        </div>
+        <hr />
+        <div class="card-m area-checkout">
+          <button class="btn-checkout">close</button>
+          <button class="btn-checkout">checkout</button>
+        </div>
       </div>
-      <p class="about-page-section-paragraph">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed voluptates
-        adipisci doloremque magni, nostrum earum animi autem corporis! Est,
-        facere. Culpa sunt optio possimus porro fugiat neque unde cum quis. A
-        perspiciatis numquam et possimus vero facere excepturi, quam, minima hic
-        veniam amet nisi molestias facilis libero delectus, soluta suscipit
-        laboriosam veritatis enim! Corrupti doloribus cumque quasi perspiciatis
-        repellendus autem. Animi ratione sed mollitia quasi, suscipit tempore
-        vero asperiores nihil eius velit? Vitae perspiciatis est placeat at,
-        distinctio accusamus quasi exercitationem aut assumenda temporibus illo
-        labore molestias pariatur a dolor. Error similique eum minus unde rerum
-        nihil dolorum temporibus nostrum ipsum incidunt quasi, quia quos illum
-        laudantium cum. Pariatur rem ea perferendis enim fuga perspiciatis
-        officiis velit qui nulla ab? Est, fuga eum dicta cumque, consequuntur,
-        quas quae voluptates deserunt ad accusamus quo repudiandae! Odio cumque
-        voluptas a libero? Eveniet omnis delectus ipsa veniam, consequatur nemo
-        ipsam incidunt pariatur corrupti! Blanditiis nostrum quod perferendis
-        iste veritatis deserunt distinctio doloribus ab numquam quisquam
-        necessitatibus sed laudantium corrupti accusantium mollitia, repellat ex
-        rem quaerat cupiditate. Iste quaerat dicta cum nesciunt commodi
-        quisquam!
-      </p>
     </section>
+
     <footer class="footer-container">
       <div class="location-container">
         <h2 class="footer-titles">Location</h2>
