--- a/pages/index.html
+++ b/pages/index.html
@@ -16,10 +16,10 @@
           <a href="index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="Menu.html" class="nav-link">Menu</a>
+          <a href="menu.html" class="nav-link">Menu</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Cart</a>
+          <a href="cart.html" class="nav-link">Cart</a>
         </li>
         <li class="nav-item">
           <a href="sign_in.html" class="nav-link">Sign In</a>
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="dishe-container-heading">
-          <a href="Menu.html">
+          <a href="menu.html">
             <button class="btn btn-more">More</button>
           </a>
         </div>
@@ -248,6 +248,7 @@
         <div style="margin-top: 10px">&copy; 2022</div>
       </div>
     </footer>
+
     <script src="../js/main.js"></script>
     <script src="../js/index.js"></script>
   </body>
