about us page is update

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -32,11 +32,9 @@
 
     <section id="go-arrow">^</section>
 
-    <section class="card-content">
+    <section class="about-page-container card-content">
       <div class="card-section">
-        <h3 class="card-m">
-          <img src="../icons/shopping-cart.png" alt="shopping-cart" /> My Cart
-        </h3>
+        <h3 class="card-m"><img src="../icons/shopping-cart.png" alt="shopping-cart" /> My Cart</h3>
         <hr />
         <div class="main-card">
           <hr class="card-m" />
@@ -53,10 +51,7 @@
         <div class="main-card">
           <hr class="card-m" />
           <div class="cart">
-            <img
-              src="../images/veg-taco-bell-crunchy-taco-menu.png"
-              class="cart-img"
-            />
+            <img src="../images/veg-taco-bell-crunchy-taco-menu.png" class="cart-img" />
             <p>taco bell</p>
             <p>₹100</p>
             <input type="number" />
@@ -97,14 +92,8 @@
       <div class="location-container">
         <h2 class="footer-titles">Location</h2>
         <div class="space-between">
-          <img
-            class="icons"
-            src="../icons/address-icon.png"
-            alt="address-icon"
-          />
-          <span class="bold-text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore.
-          </span>
+          <img class="icons" src="../icons/address-icon.png" alt="address-icon" />
+          <span class="bold-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore. </span>
         </div>
         <div class="space-between">
           <img class="icons" src="../icons/mail-icon.png" alt="mail-icon" />
@@ -136,29 +125,17 @@
         <h2 class="footer-titles">Social Media</h2>
         <div class="social-section">
           <a href="#">
-            <img
-              src="../icons/instagram-icon.png"
-              alt="instagram_icon"
-              class="social-icon"
-            />
+            <img src="../icons/instagram-icon.png" alt="instagram_icon" class="social-icon" />
           </a>
         </div>
         <div class="social-section">
           <a href="#">
-            <img
-              src="../icons/facebook-icon.png"
-              alt="facebook_icon"
-              class="social-icon"
-            />
+            <img src="../icons/facebook-icon.png" alt="facebook_icon" class="social-icon" />
           </a>
         </div>
         <div class="social-section">
           <a href="#">
-            <img
-              src="../icons/twitter-icon.png"
-              alt="twitter_icon"
-              class="social-icon"
-            />
+            <img src="../icons/twitter-icon.png" alt="twitter_icon" class="social-icon" />
           </a>
         </div>
         <div style="margin-top: 10px">&copy; 2022</div>
