--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -37,40 +37,55 @@
         <h2 class="about-us-heading">About Us</h2>
       </div>
       <p class="about-page-section-paragraph">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed voluptates
-        adipisci doloremque magni, nostrum earum animi autem corporis! Est,
-        facere. Culpa sunt optio possimus porro fugiat neque unde cum quis. A
-        perspiciatis numquam et possimus vero facere excepturi, quam, minima hic
-        veniam amet nisi molestias facilis libero delectus, soluta suscipit
-        laboriosam veritatis enim! Corrupti doloribus cumque quasi perspiciatis
-        repellendus autem. Animi ratione sed mollitia quasi, suscipit tempore
-        vero asperiores nihil eius velit? Vitae perspiciatis est placeat at,
-        distinctio accusamus quasi exercitationem aut assumenda temporibus illo
-        labore molestias pariatur a dolor. Error similique eum minus unde rerum
-        nihil dolorum temporibus nostrum ipsum incidunt quasi, quia quos illum
-        laudantium cum. Pariatur rem ea perferendis enim fuga perspiciatis
-        officiis velit qui nulla ab? Est, fuga eum dicta cumque, consequuntur,
-        quas quae voluptates deserunt ad accusamus quo repudiandae! Odio cumque
-        voluptas a libero? Eveniet omnis delectus ipsa veniam, consequatur nemo
-        ipsam incidunt pariatur corrupti! Blanditiis nostrum quod perferendis
-        iste veritatis deserunt distinctio doloribus ab numquam quisquam
-        necessitatibus sed laudantium corrupti accusantium mollitia, repellat ex
-        rem quaerat cupiditate. Iste quaerat dicta cum nesciunt commodi
-        quisquam!
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed voluptates adipisci doloremque magni, nostrum
+        earum animi autem corporis! Est, facere. Culpa sunt optio possimus porro fugiat neque unde cum quis. A
+        perspiciatis numquam et possimus vero facere excepturi, quam, minima hic veniam amet nisi molestias facilis
+        libero delectus, soluta suscipit laboriosam veritatis enim! Corrupti doloribus cumque quasi perspiciatis
+        repellendus autem. Animi ratione sed mollitia quasi, suscipit tempore vero asperiores nihil eius velit? Vitae
+        perspiciatis est placeat at, distinctio accusamus quasi exercitationem aut assumenda temporibus illo labore
+        molestias pariatur a dolor. Error similique eum minus unde rerum nihil dolorum temporibus nostrum ipsum incidunt
+        quasi, quia quos illum laudantium cum. Pariatur rem ea perferendis enim fuga perspiciatis officiis velit qui
+        nulla ab? Est, fuga eum dicta cumque, consequuntur, quas quae voluptates deserunt ad accusamus quo repudiandae!
+        Odio cumque voluptas a libero? Eveniet omnis delectus ipsa veniam, consequatur nemo ipsam incidunt pariatur
+        corrupti! Blanditiis nostrum quod perferendis iste veritatis deserunt distinctio doloribus ab numquam quisquam
+        necessitatibus sed laudantium corrupti accusantium mollitia, repellat ex rem quaerat cupiditate. Iste quaerat
+        dicta cum nesciunt commodi quisquam!
       </p>
+      <div class="our-chefs-container">
+        <div class="our-chefs-section">
+          <h3>our chefs</h3>
+          <div class="chefs-img-section">
+            <div class="chef-area-container">
+              <img src="../images/chef-1.jpg" alt="" class="chef-img" />
+              <h2>Julia Shumway</h2>
+              <p>Executive Chef</p>
+            </div>
+            <div class="chef-area-container">
+              <img src="../images/chef-2.jpg" alt="" class="chef-img" />
+              <h2>Nicola Baker</h2>
+              <p>Assistant Chef</p>
+            </div>
+            <div class="chef-area-container">
+              <img src="../images/chef-3.jpg" alt="" class="chef-img" />
+              <h2>Arthur Gaon</h2>
+              <p>Head Chef</p>
+            </div>
+            <div class="chef-area-container">
+              <img src="../images/chef-4.jpg" alt="" class="chef-img" />
+              <h2>Ashley Kohr</h2>
+              <p>Assistant Chef</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+
     <footer class="footer-container">
       <div class="location-container">
         <h2 class="footer-titles">Location</h2>
         <div class="space-between">
-          <img
-            class="icons"
-            src="../icons/address-icon.png"
-            alt="address-icon"
-          />
-          <span class="bold-text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore.
-          </span>
+          <img class="icons" src="../icons/address-icon.png" alt="address-icon" />
+          <span class="bold-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore. </span>
         </div>
         <div class="space-between">
           <img class="icons" src="../icons/mail-icon.png" alt="mail-icon" />
@@ -102,29 +117,17 @@
         <h2 class="footer-titles">Social Media</h2>
         <div class="social-section">
           <a href="#">
-            <img
-              src="../icons/instagram-icon.png"
-              alt="instagram_icon"
-              class="social-icon"
-            />
+            <img src="../icons/instagram-icon.png" alt="instagram_icon" class="social-icon" />
           </a>
         </div>
         <div class="social-section">
           <a href="#">
-            <img
-              src="../icons/facebook-icon.png"
-              alt="facebook_icon"
-              class="social-icon"
-            />
+            <img src="../icons/facebook-icon.png" alt="facebook_icon" class="social-icon" />
           </a>
         </div>
         <div class="social-section">
           <a href="#">
-            <img
-              src="../icons/twitter-icon.png"
-              alt="twitter_icon"
-              class="social-icon"
-            />
+            <img src="../icons/twitter-icon.png" alt="twitter_icon" class="social-icon" />
           </a>
         </div>
         <div style="margin-top: 10px">&copy; 2022</div>
