index.html move from pages to root directory

--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Cooking Bite</title>
   </head>
 
   <body>
     <header class="header">
-      <a href="index.html" class="nav-logo">Cooking Bite</a>
+      <a href="./index.html" class="nav-logo">Cooking Bite</a>
       <ul class="nav-links">
         <li class="nav-item">
-          <a href="index.html" class="nav-link">Home</a>
+          <a href="./index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="menu.html" class="nav-link">Menu</a>
+          <a href="./pages/menu.html" class="nav-link">Menu</a>
         </li>
         <li class="nav-item">
-          <a href="cart.html" class="nav-link">Cart</a>
+          <a href="./pages/cart.html" class="nav-link">Cart</a>
         </li>
         <li class="nav-item">
-          <a href="sign_in.html" class="nav-link">Sign In</a>
+          <a href="./pages/sign_in.html" class="nav-link">Sign In</a>
         </li>
         <li class="nav-item">
-          <a href="about_us.html" class="nav-link">About us</a>
+          <a href="./pages/about_us.html" class="nav-link">About us</a>
         </li>
       </ul>
     </header>
@@ -46,12 +46,12 @@
         <div class="dishes-containers">
           <div class="dishes-img-containers">
             <div class="dish-img-border-containers">
-              <img src="../images/pizza.jpg" alt="pizza" class="dishes-img" />
+              <img src="./images/pizza.jpg" alt="pizza" class="dishes-img" />
               <div class="dish-img-btn-containers">
                 <h3>Pizza</h3>
                 <span class="item-price">₹200</span>
                 <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                  <img src="./icons/shopping-cart.png" alt="Shooping cart" />
                   Order Now
                 </button>
               </div>
@@ -59,12 +59,12 @@
           </div>
           <div class="dishes-img-containers">
             <div class="dish-img-border-containers">
-              <img src="../images/burger.jpg" alt="burger" class="dishes-img" />
+              <img src="./images/burger.jpg" alt="burger" class="dishes-img" />
               <div class="dish-img-btn-containers">
                 <h3>Burger</h3>
                 <span class="item-price">₹100</span>
                 <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                  <img src="./icons/shopping-cart.png" alt="Shooping cart" />
                   Order Now
                 </button>
               </div>
@@ -73,7 +73,7 @@
           <div class="dishes-img-containers">
             <div class="dish-img-border-containers">
               <img
-                src="../images/sandwich.jpg"
+                src="./images/sandwich.jpg"
                 alt="sandwich"
                 class="dishes-img"
               />
@@ -81,7 +81,7 @@
                 <h3>Sandwich</h3>
                 <span class="item-price">₹50</span>
                 <button type="button" class="order-card">
-                  <img src="../icons/shopping-cart.png" alt="Shooping cart" />
+                  <img src="./icons/shopping-cart.png" alt="Shooping cart" />
                   Order Now
                 </button>
               </div>
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="dishe-container-heading">
-          <a href="menu.html">
+          <a href="./pages/menu.html">
             <button class="btn btn-more">More</button>
           </a>
         </div>
@@ -105,7 +105,7 @@
           with the chefs, dreaming up menus that will arrive fresh and full of
           flavour. Try us!
         </p>
-        <a href="about_us.html">
+        <a href="./pages/about_us.html">
           <button class="btn">Learn more</button>
         </a>
       </div>
@@ -118,7 +118,7 @@
       <div class="massage-container">
         <div class="our-clients-massage-containers">
           <div class="clients-container">
-            <img src="../images/c1.png" alt="Abhay" />
+            <img src="./images/c1.png" alt="Abhay" />
           </div>
           <div class="clients-names-containers">
             <h3>Abhay</h3>
@@ -132,7 +132,7 @@
         </div>
         <div class="our-clients-massage-containers">
           <div class="clients-container">
-            <img src="../images/c2.png" alt="Dipali" />
+            <img src="./images/c2.png" alt="Dipali" />
           </div>
           <div class="clients-names-containers">
             <h3>Dipali</h3>
@@ -146,7 +146,7 @@
         </div>
         <div class="our-clients-massage-containers">
           <div class="clients-container">
-            <img src="../images/c3.png" alt="Dhruvik" />
+            <img src="./images/c3.png" alt="Dhruvik" />
           </div>
           <div class="clients-names-containers">
             <h3>Dhruvik</h3>
@@ -161,7 +161,7 @@
       </div>
       <div class="left-arrow-container">
         <img
-          src="../icons/arrow-left.png"
+          src="./icons/arrow-left.png"
           alt="left arrow"
           id="left-arrow"
           class="icons-arrows"
@@ -169,7 +169,7 @@
       </div>
       <div class="right-arrow-container">
         <img
-          src="../icons/arrow-right.png"
+          src="./icons/arrow-right.png"
           alt="right arrow"
           id="right-arrow"
           class="icons-arrows"
@@ -183,7 +183,7 @@
         <div class="space-between">
           <img
             class="icons"
-            src="../icons/address-icon.png"
+            src="./icons/address-icon.png"
             alt="address-icon"
           />
           <span class="bold-text">
@@ -191,13 +191,13 @@
           </span>
         </div>
         <div class="space-between">
-          <img class="icons" src="../icons/mail-icon.png" alt="mail-icon" />
+          <img class="icons" src="./icons/mail-icon.png" alt="mail-icon" />
           <span class="bold-text">
             <a href="#">info@example.com</a>
           </span>
         </div>
         <div class="space-between">
-          <img class="icons" src="../icons/phone-icon.png" alt="phone-icon" />
+          <img class="icons" src="./icons/phone-icon.png" alt="phone-icon" />
           <span class="bold-text">+0 123-456-7890 </span>
         </div>
       </div>
@@ -221,7 +221,7 @@
         <div class="social-section">
           <a href="#">
             <img
-              src="../icons/instagram-icon.png"
+              src="./icons/instagram-icon.png"
               alt="instagram_icon"
               class="social-icon"
             />
@@ -230,7 +230,7 @@
         <div class="social-section">
           <a href="#">
             <img
-              src="../icons/facebook-icon.png"
+              src="./icons/facebook-icon.png"
               alt="facebook_icon"
               class="social-icon"
             />
@@ -239,7 +239,7 @@
         <div class="social-section">
           <a href="#">
             <img
-              src="../icons/twitter-icon.png"
+              src="./icons/twitter-icon.png"
               alt="twitter_icon"
               class="social-icon"
             />
@@ -249,7 +249,7 @@
       </div>
     </footer>
 
-    <script src="../js/main.js"></script>
-    <script src="../js/index.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
