--- a/pages/cart.html
+++ b/pages/cart.html
@@ -10,10 +10,10 @@
 
   <body>
     <header class="header">
-      <a href="index.html" class="nav-logo">Cooking Bite</a>
+      <a href="../index.html" class="nav-logo">Cooking Bite</a>
       <ul class="nav-links">
         <li class="nav-item">
-          <a href="index.html" class="nav-link">Home</a>
+          <a href="../index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
           <a href="menu.html" class="nav-link">Menu</a>
